force-app/main/default/objects/User/fields/Accounts_Receivable_Manager__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Receivable_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accounts Receivable Manager</label>
    <type>Checkbox</type>
</CustomField>