force-app/main/default/objects/User/fields/Accounts_Receivable_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Receivable_Reviewer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accounts Receivable Reviewer</label>
    <type>Checkbox</type>
</CustomField>