force-app/main/default/objects/User/fields/Commercialization_Manager__c.field-meta.xml
<CustomField>
    <fullName>Commercialization_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>bss.Business Development.WALSCommercializationManagers</inlineHelpText>
    <label>Commercialization Manager</label>
    <type>Checkbox</type>
</CustomField>