force-app/main/default/objects/User/fields/Contracts_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Specialist__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>bss.Business Development.WALSContractSpecialist</inlineHelpText>
    <label>Contracts Specialist</label>
    <type>Checkbox</type>
</CustomField>