force-app/main/default/objects/User/fields/CRADA_Contract_Specialist__c.field-meta.xml
<CustomField>
    <fullName>CRADA_Contract_Specialist__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>bss.Business Development.WALSContractSpecialist</inlineHelpText>
    <label>CRADA Contract Specialist</label>
    <type>Checkbox</type>
</CustomField>