force-app/main/default/objects/User/fields/CRADA_Specialist__c.field-meta.xml
<CustomField>
    <fullName>CRADA_Specialist__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>bss.Business Development.WALSCRADASPECIALIST</inlineHelpText>
    <label>CRADA Specialist</label>
    <type>Checkbox</type>
</CustomField>