force-app/main/default/objects/User/fields/CSC_Approver__c.field-meta.xml
<CustomField>
    <fullName>CSC_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSC Approver</label>
    <type>Checkbox</type>
</CustomField>