force-app/main/default/objects/User/fields/DOE_Field_Element_Work_Proposal_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>DOE_Field_Element_Work_Proposal_Reviewer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>bss.Business Development.WALSPNSOReviewer</inlineHelpText>
    <label>DOE Field Element Work Proposal Reviewer</label>
    <type>Checkbox</type>
</CustomField>