force-app/main/default/objects/User/fields/DOE_IP_Approver__c.field-meta.xml
<CustomField>
    <fullName>DOE_IP_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>bss.Business Development.WALSPNSOIPServices</inlineHelpText>
    <label>DOE IP Approver</label>
    <type>Checkbox</type>
</CustomField>