force-app/main/default/objects/User/fields/DOE_Site_Office_Approver__c.field-meta.xml
<CustomField>
    <fullName>DOE_Site_Office_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>bss.Business Development.WALSWFODOESiteOfficeApprovers</inlineHelpText>
    <label>DOE Site Office Approver</label>
    <type>Checkbox</type>
</CustomField>