force-app/main/default/objects/User/fields/IWO_Specialist__c.field-meta.xml
<CustomField>
    <fullName>IWO_Specialist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IWO Specialist</label>
    <type>Checkbox</type>
</CustomField>