force-app/main/default/objects/User/fields/PNNL_ACT_Office__c.field-meta.xml
<CustomField>
    <fullName>PNNL_ACT_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>bss.Business Development.WALSACTOffice</inlineHelpText>
    <label>PNNL ACT Office</label>
    <type>Checkbox</type>
</CustomField>