force-app/main/default/objects/User/fields/PNNL_IP_Approver__c.field-meta.xml
<CustomField>
    <fullName>PNNL_IP_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>bss.Business Development.WALSPNNLIPServices</inlineHelpText>
    <label>PNNL IP Approver</label>
    <type>Checkbox</type>
</CustomField>