force-app/main/default/objects/User/fields/PNNL_Program_Manager__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Program_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Program Manager will be part of the DOE Approval Process</description>
    <label>Program Manager</label>
    <type>Checkbox</type>
</CustomField>