force-app/main/default/objects/User/fields/PNNL_Work_Proposal_Manager_and_Principal__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Work_Proposal_Manager_and_Principal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>bss.Business Development.WALSProgramMgr</inlineHelpText>
    <label>PNNL Work Proposal Manager and Principal</label>
    <type>Checkbox</type>
</CustomField>