force-app/main/default/objects/User/fields/PNSO_ACT_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>PNSO_ACT_Reviewer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>bss.Business Development.WALSPNSOCoordinator</inlineHelpText>
    <label>PNSO ACT Reviewer</label>
    <type>Checkbox</type>
</CustomField>