force-app/main/default/objects/User/fields/PNSO_Animal_Researcher__c.field-meta.xml
<CustomField>
    <fullName>PNSO_Animal_Researcher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PNSO Animal Researcher</label>
    <type>Checkbox</type>
</CustomField>