force-app/main/default/objects/User/fields/PNSO_Contracting_Office__c.field-meta.xml
<CustomField>
    <fullName>PNSO_Contracting_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>bss.Business Development.WALSPNSOContractOfficers</inlineHelpText>
    <label>PNSO Contracting Office</label>
    <type>Checkbox</type>
</CustomField>