force-app/main/default/objects/User/fields/PNSO_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>PNSO_Coordinator__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>bss.Business Development.WALSPNSOReviewer</inlineHelpText>
    <label>PNSO Coordinator</label>
    <type>Checkbox</type>
</CustomField>