force-app/main/default/objects/User/fields/PNSO_Coordinator_Foreign_Approver__c.field-meta.xml
<CustomField>
    <fullName>PNSO_Coordinator_Foreign_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PNSO Coordinator - Foreign Approver</label>
    <type>Checkbox</type>
</CustomField>