force-app/main/default/objects/User/fields/PNSO_Proposal_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>PNSO_Proposal_Reviewer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>bss.Business Development.WALSPNSOReviewer</inlineHelpText>
    <label>PNSO Proposal Reviewer</label>
    <type>Checkbox</type>
</CustomField>