force-app/main/default/objects/User/fields/PNSO_Technical_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>PNSO_Technical_Reviewer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>bss.Business Development.WALSWFOPNSOTechRep</inlineHelpText>
    <label>PNSO Technical Reviewer</label>
    <type>Checkbox</type>
</CustomField>