force-app/main/default/objects/User/fields/Project_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Project_Coordinator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Coordinator</label>
    <type>Checkbox</type>
</CustomField>