force-app/main/default/objects/User/fields/Project_Staff_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Project_Staff_Reviewer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Staff Reviewer</label>
    <type>Checkbox</type>
</CustomField>