force-app/main/default/objects/User/fields/SPP_Contract_Specialist__c.field-meta.xml
<CustomField>
    <fullName>SPP_Contract_Specialist__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>ACQ.AppAccess.ContSpec</inlineHelpText>
    <label>SPP Contract Specialist</label>
    <type>Checkbox</type>
</CustomField>