force-app/main/default/objects/User/fields/SPP_Office_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>SPP_Office_Reviewer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>bss.Business Development.WALSWFOOFFICE</inlineHelpText>
    <label>SPP Office Reviewer</label>
    <type>Checkbox</type>
</CustomField>