force-app/main/default/objects/User/fields/WALS_Sales_Team_Leads__c.field-meta.xml
<CustomField>
    <fullName>WALS_Sales_Team_Leads__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>bss.Business Development.WALSSalesTeamLeads</inlineHelpText>
    <label>WALS Sales Team Leads</label>
    <type>Checkbox</type>
</CustomField>