force-app/main/default/objects/User/fields/Work_Authorization_Program_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Work_Authorization_Program_Specialist__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>bss.Business Development.WALSProgramSpec</inlineHelpText>
    <label>Work Authorization Program Specialist</label>
    <type>Checkbox</type>
</CustomField>